Custom Record Page/Test/force-app/main/default/objects/Dynamic_Layout__c/Dynamic_Layout__c.object-meta.xml
<CustomObject>
    <description>Stores the high-level dynamic record layout metadata.</description>
    <label>Dynamic Layout</label>
    <nameField>
        <label>Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>