Custom Record Page/Test/force-app/main/default/objects/Dynamic_Layout__c/fields/Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_URL__c</fullName>
    <description>Stores the background image URL for the layout.</description>
    <label>Background Image URL</label>
    <type>Url</type>
</CustomField>