Custom Record Page/Test/force-app/main/default/objects/Dynamic_Layout__c/fields/Displayed_Fields__c.field-meta.xml
<CustomField>
    <fullName>Displayed_Fields__c</fullName>
    <description>Stores the comma-separated or text list of fields displayed in the layout.</description>
    <label>Displayed Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>