Custom Record Page/Test/force-app/main/default/objects/Dynamic_Layout__c/fields/Layout_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Layout_Config_JSON__c</fullName>
    <description>Stores the full JSON configuration for the layout directly on the layout object.</description>
    <label>Layout Config JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>